--- a/01-transitions/style.scss
+++ b/01-transitions/style.scss
@@ -1,4 +1,4 @@
-@import '../styles/base.scss';
+@import "../styles/base.scss";
 
 :root {
   --color-gray: #8c97b7;
@@ -22,7 +22,7 @@ body {
   grid-template-columns: 1fr auto;
   grid-template-rows: 1fr;
   grid-column-gap: 1rem;
-  grid-template-areas: 'input button';
+  grid-template-areas: "input button";
 
   --color: var(--color-gray);
   &:focus-within {
@@ -37,6 +37,8 @@ body {
   border: 2px solid var(--color);
   border-radius: 0.25rem;
   outline: none;
+
+  transition: border-color 0.3s;
 }
 
 .ui-button {
@@ -48,6 +50,12 @@ body {
   border-radius: 0.25rem;
   height: var(--input-height);
   background-color: var(--color);
+
+  transition: background-color 0.5s, transform 0.3s;
+  cursor: pointer;
+  &:hover {
+    transform: scale(1.1);
+  }
 }
 
 [data-show]:not([data-active]) {
