--- a/04-states/style.scss
+++ b/04-states/style.scss
@@ -1,4 +1,4 @@
-@import '../styles/base.scss';
+@import "../styles/base.scss";
 
 :root {
   --color-gray: #8c97b7;
@@ -25,7 +25,7 @@ body {
   grid-template-columns: 1fr auto;
   grid-template-rows: 1fr;
   grid-column-gap: 1rem;
-  grid-template-areas: 'input button';
+  grid-template-areas: "input button";
   transition: all var(--transition-duration) var(--transition-easing);
   will-change: transform;
 
@@ -34,16 +34,21 @@ body {
     --color: var(--color-blue);
   }
 
-  &[data-state='subscribe'] {
+  &[data-state="subscribe"] {
     // Add an animation here
+    animation: fade 1s both;
   }
 
-  &[data-state='success'] {
+  &[data-state="success"] {
     // Change the color and/or add an animation here
+    --color: rgba(13, 204, 86, 0.966);
+    animation: happy 1s both;
   }
 
-  &[data-state='error'] {
+  &[data-state="error"] {
     // Change the color and/or add an animation here
+    --color: rgba(223, 49, 26, 0.959);
+    animation: shake 1s both;
   }
 
   > .ui-input,
@@ -82,6 +87,7 @@ body {
   height: var(--input-height);
   background-color: var(--color);
   transition: inherit;
+  cursor: pointer;
 }
 
 [data-show]:not([data-active]) {
@@ -120,5 +126,30 @@ body {
   from,
   to {
     transform: none;
+  }
+}
+
+@keyframes happy {
+  0%,
+  100% {
+    transform: none;
+  }
+  35% {
+    transform: translateY(-100%);
+  }
+  50% {
+    transform: translateY(-100%) scaleY(1.05) scaleX(1.2);
+  }
+  65% {
+    transform: translateY(-100%) scale(1);
+  }
+}
+
+@keyframes fade {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0.2;
   }
 }
