--- a/05-layout/style.scss
+++ b/05-layout/style.scss
@@ -66,21 +66,32 @@ body {
   }
 
   // Add invert styles here to :before
-  &[data-state="invert"] {
+  &[data-state="invert"]::before {
     transform: translate(calc(var(--dx) * 1px), calc(var(--dy) * 1px))
       scale(var(--dw), var(--dh));
   }
 
   // Add play styles here to :before
 
-  &[data-state="play"] {
+  &[data-state="play"]::before {
     transition: transform 1s;
     transform: none;
   }
 
   > .ui-caption {
+    display: block;
     font-size: 2rem;
     font-weight: bold;
     color: white;
+    &[data-state="invert"] {
+      transform: translate(calc(var(--dx) * 1px), calc(var(--dy) * 1px));
+    }
+
+    // Add play styles here to :before
+
+    &[data-state="play"] {
+      transition: transform 1s;
+      transform: none;
+    }
   }
 }
